libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__lexical_with_underscore.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: Lexical identifier starting with underscore
expression: _hello
info:
  kind: Ok
---
Ident {
    span: SpanId(
        1,
    ),
    value: Symbol(
        "_hello",
    ),
    kind: Lexical,
}
