libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__mixed_lexical_then_symbol.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: Lexical followed by symbol without space
expression: hello++
info:
  kind: Err
---
hello++
     ^
