libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__mixed_with_whitespace.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: Lexical then symbol with space
expression: "hello `symbol`"
info:
  kind: Err
---
hello `symbol`
     ^
