libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__symbol_escaped_with_trailing.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: Escaped symbol with trailing content
expression: "`++` next"
info:
  kind: Err
---
`++` next
    ^
