libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__symbol_mixed_blocks.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: Symbols from different Unicode blocks
expression: ≈∞♥★
info:
  kind: Ok
---
Ident {
    span: SpanId(
        1,
    ),
    name: Symbol(
        "≈∞♥★",
    ),
    kind: Symbol,
}
