libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__symbol_unicode.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: Unicode symbol
expression: …
info:
  kind: Ok
---
Ident {
    span: SpanId(
        1,
    ),
    value: Symbol(
        "…",
    ),
    kind: Symbol,
}
