libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__symbol_unicode_complex.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: Complex Unicode symbols
expression: ≤≥≠
info:
  kind: Ok
---
Ident {
    span: SpanId(
        1,
    ),
    name: Symbol(
        "≤≥≠",
    ),
    kind: Symbol,
}
